<resources>
    <string name="app_name">NotasFaceis</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Entrar</string>

    <string name="entrar"><b>Entrar</b></string>
    <string name="cadastrar"><b>Cadastro</b></string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="confirma_senha">Confirma Senha</string>
    <string name="voltar">Voltar</string>
    <string name="ok">OK</string>
    <string name="plus"><b>+</b></string>
    <string name="novo_caderno">Novo Caderno</string>
    <string name="cadernos">Cadernos</string>
    <string name="title_activity_cadastro">CadastroActivity</string>
    <string name="novo_usuario">Novo usuario? Clique aqui!</string>
    <string name="title_activity_notas">NotasActivity</string>
    <string name="notas">Notas</string>

</resources>
