<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center_horizontal|top"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.garagesoft.notasfaceis.CadastroFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/control_margin"
        android:text="@string/cadastrar"
        android:textSize="@dimen/text_large" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/control_margin"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/text_large" />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/control_margin"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textSize="@dimen/text_large" />

    <EditText
        android:id="@+id/etConfirmaSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/control_margin"
        android:hint="@string/confirma_senha"
        android:inputType="textPassword"
        android:textSize="@dimen/text_large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:layout_weight="1"
            android:onClick="btnCadastrarClick"
            android:text="@string/ok"
            android:textSize="@dimen/text_large" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/control_margin"
            android:layout_weight="1"
            android:onClick="btnVoltarClick"
            android:text="@string/voltar"
            android:textSize="@dimen/text_large" />
    </LinearLayout>


</LinearLayout>
