<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="br.facens.notasfaceis.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/control_margin"
        android:text="@string/cadernos"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etNovoCaderno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/novo_caderno"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="25dp"
            android:onClick="btnNovoCadernoClick"/>
    </LinearLayout>


    <ListView
        android:id="@+id/lvCadernos"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/linearLayout"
        android:layout_below="@id/textView"
        android:layout_margin="@dimen/control_margin"></ListView>

</RelativeLayout>
